style(background-color): issue on iphone the top of the sreen is blue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@ a {
 
 body {
   background: linear-gradient(to bottom, #00f2fe, #4facfe);
-  background-color: #4facfe;
+  background-color: #00f2fe;
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
